[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Joystick.gd" type="Script" id=1]
[ext_resource path="res://art/buttons/dir.png" type="Texture" id=2]
[ext_resource path="res://art/buttons/curdir.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144, 80 )

[node name="Joystick" type="Control"]
margin_right = 288.0
margin_bottom = 160.0
script = ExtResource( 1 )

[node name="SpawnButton" type="TouchScreenButton" parent="."]
position = Vector2( 144, 80 )
shape = SubResource( 1 )
passby_press = true

[node name="Directions" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 144, 80 )

[node name="UpSprite" type="Sprite" parent="Directions"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )

[node name="DownSprite" type="Sprite" parent="Directions"]
position = Vector2( 0, 32 )
rotation = -3.14159
texture = ExtResource( 2 )

[node name="LeftSprite" type="Sprite" parent="Directions"]
position = Vector2( -32, 0 )
rotation = -1.5708
texture = ExtResource( 2 )

[node name="RightSprite" type="Sprite" parent="Directions"]
position = Vector2( 32, 0 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CurSprite" type="Sprite" parent="Directions"]
position = Vector2( 0, -32 )
texture = ExtResource( 3 )
<<<<<<< HEAD
[connection signal="pressed" from="SpawnButton" to="." method="_on_SpawnButton_pressed"]
[connection signal="released" from="SpawnButton" to="." method="_on_SpawnButton_released"]
=======
[connection signal="pressed" from="SpawButton" to="." method="_on_SpawButton_pressed"]
>>>>>>> 433bf2e19122380b805ee7ecd1bb28a14d5e4bff
